--- a/src/front_angular/src/app/core/sidebar/user/user.component.html
+++ b/src/front_angular/src/app/core/sidebar/user/user.component.html
@@ -1,1 +1,17 @@
 <p>user works!</p>
+<!--<div>-->
+<!--  <h2>Channels</h2>-->
+<!--  <ul>-->
+<!--    <li *ngFor="let channel of listChannels">-->
+<!--      {{ channel.channelName }}-->
+<!--      <button (click)="updateChannel(channel.id, 'New Name')">Update</button>-->
+<!--      <button (click)="deleteChannel(channel.id)">Delete</button>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--  <form-->
+<!--    (submit)="createChannel(newChannelName.value); newChannelName.value = ''"-->
+<!--  >-->
+<!--    <input type="text" #newChannelName required />-->
+<!--    <button type="submit">Create</button>-->
+<!--  </form>-->
+<!--</div>-->
