--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -1,28 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Collapse</title>
+  </head>
+  <body>
+    <div>
+      <h2>Channels</h2>
+      <ul>
+        <li *ngFor="let channel of listChannels">
+          <a routerLink="messages" class="nav-link" style="padding-bottom: 0">
+            {{ channel.channelName }}
+          </a>
+          <form>
+            <input #newNameInput type="text" />
+            <button (click)="updateChannel(channel.id, newNameInput.value)">
+              Update
+            </button>
+          </form>
+          <!--<button (click)="updateChannel(channel.id, 'New Name')">
+          
+            Update
+          </button>
+        -->
+          <button (click)="deleteChannel(channel.id)">Delete</button>
+        </li>
+      </ul>
+      <form
+        (submit)="
+          createChannel(newChannelName.value); newChannelName.value = ''
+        "
+      >
+        <input type="text" #newChannelName required />
+        <button type="submit">Create</button>
+      </form>
+    </div>
+  </body>
+</html>
+<!--
 <div>
   <h2>Channels</h2>
   <ul>
     <li *ngFor="let channel of listChannels">
-      {{ channel.channelName }}
-      <button (click)="updateChannel(channel.id, 'New Name')">Update</button>
+      <form>
+        <span>{{ channel.channelName }}</span>
+        <input #newNameInput type="text" />
+        <button (click)="updateChannel(channel.id, newNameInput.value)">
+          Update
+        </button>
+      </form>
       <button (click)="deleteChannel(channel.id)">Delete</button>
     </li>
   </ul>
   <form
     (submit)="createChannel(newChannelName.value); newChannelName.value = ''"
   >
-    <input type="text" #newChannelName required />
+    <input type="text" #newChannelName />
     <button type="submit">Create</button>
   </form>
-</div>
-
-<!--      
-<div class="div">
-  <div class="div-2">
-    <div class="div-3">#</div>
-    <p class="general">Général</p>
-  </div>
-  <div class="div-5">
-    <div class="div-6"><div class="div-7">1</div></div>
-  </div>
 </div>
 -->
