--- a/src/front_angular/src/app/core/sidebar/user/user.component.html
+++ b/src/front_angular/src/app/core/sidebar/user/user.component.html
@@ -3,6 +3,7 @@
     <h2>Users</h2>
     <ul>
         <li *ngFor="let user of listUsers">
+            {{ user.id }}
             {{ user.userName }}
             <button (click)="updateUser(user.id, 'New Name')">Update</button>
             <button (click)="deleteUser(user.id)">Delete</button>
@@ -14,20 +15,19 @@
     </form>
 </div>
 
-<!-- <form *ngIf="formUser" [formGroup]="formUser"> -->
+
+
 <form *ngIf="formUser" [formGroup]="formUser">
-    <!-- <form> -->
     <div style="max-width: 700px" *ngIf="modifyClientSuccess" class="col align-self-center alert alert-success">
         <p class="my-0" style="text-align: center">User modifié avec succès.</p>
     </div>
-    <!-- company_name -->
     <div class="mb-3">
         <label for="user" class="form-label">Nom de l'utilisateur</label>
         <input formControlName="user" type="text" class="form-control" id="user" placeholder="Avatar">
     </div>
-    <span *ngIf="formUser.controls['user'].errors?.['required'] &&
+    <!-- <span *ngIf="formUser.controls['user'].errors?.['required'] &&
                   formUser.controls['user'].touched" class="text-danger">Veuillez entrer un prenom
-    </span>
+    </span> -->
     <!-- <div class="mb-3">
         <select name="state" id="state" formControlName="state">
             <option [value]="selected">{{selected}}</option>
