--- a/src/front_angular/src/app/app.component.html
+++ b/src/front_angular/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div id="app-container" class="position-relative">
   <app-header></app-header>
+  <app-list-messages> </app-list-messages>
+
   <div class="d-flex flex-grow-1 position-relative">
     <div id="page-content-wrapper" class="bg-light" style="flex-grow: 1">
       <router-outlet></router-outlet>
