--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -39,6 +39,9 @@
   </body>
 </html>
 <!--
+
+   showInputUpdate
+              *ngIf="channel.channelName === 'Géneral'"
 <div>
   <h2>Channels</h2>
   <ul>
