maj affichage users

--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -5,10 +5,10 @@
 
   <div class="name-message">
     <div class="name-hour">
-      <p class="text-name">{{ message.user.userName }}</p>
-      <p class="note">{{ message.hour }}</p>
+      <!-- <p class="text-name">{{ message.user.userName }}</p> -->
+      <!-- <p class="note">{{ message.hour }}</p> -->
     </div>
-    <p class="text-message">{{ message.content }}</p>
+    <!-- <p class="text-message">{{ message.content }}</p> -->
   </div>
 </div>
 
