--- a/src/front_angular/src/app/core/sidebar/user/user.component.html
+++ b/src/front_angular/src/app/core/sidebar/user/user.component.html
@@ -1,40 +1,48 @@
 <p>user works!</p>
-<div>
+<!-- 
+    <div>
     <h2>Users</h2>
     <ul>
         <li *ngFor="let user of listUsers">
             {{ user.id }}
             {{ user.userName }}
-            <button (click)="updateUser(user.id, 'New Name')">Update</button>
+            <button (click)="updateUser(user.id, newUserName.value)" placeholder="re">Update</button>
             <button (click)="deleteUser(user.id)">Delete</button>
         </li>
     </ul>
-    <form (submit)="createUser(newUserName.value); newUserName.value = ''">
-        <input type="text" #newUserName required />
-        <button type="submit">Create</button>
-    </form>
+</div> 
+-->
+<div style="max-width: 700px" *ngIf="createUserSuccess" class="col align-self-center alert alert-success">
+    <p class="my-0" style="text-align: center">Client modifié avec succès.</p>
+</div>
+<div style="max-width: 700px" *ngIf="deleteUserSuccess" class="col align-self-center alert alert-success">
+    <p class="my-0" style="text-align: center">Client modifié avec succès.</p>
+</div>
+<div style="max-width: 700px" *ngIf="updateUserSuccess" class="col align-self-center alert alert-success">
+    <p class="my-0" style="text-align: center">Client modifié avec succès.</p>
 </div>
 
+<h2>Users</h2>
+<table border="1px">
+    <tbody>
+        <tr *ngFor="let user of listUsers">
+            <td>{{user.id}}</td>
+            <td>{{user.userName}}</td>
+            <!-- <td><button (click)="updateUser(user.id, newUserName.value)" placeholder="re">Update</button></td> -->
+            <td>
+                <!--                 
+                    <form (submit)="updateUser(user.id, newUserName.value); newUserName.value = ''">
+                    <input type="text" #newUserName required />
+                    <button type="submit">update User</button>
+                </form> 
+            -->
+            </td>
+            <td><button (click)="deleteUser(user.id)">Delete</button></td>
 
+    </tbody>
+</table>
 
-<form *ngIf="formUser" [formGroup]="formUser">
-    <div style="max-width: 700px" *ngIf="modifyClientSuccess" class="col align-self-center alert alert-success">
-        <p class="my-0" style="text-align: center">User modifié avec succès.</p>
-    </div>
-    <div class="mb-3">
-        <label for="user" class="form-label">Nom de l'utilisateur</label>
-        <input formControlName="user" type="text" class="form-control" id="user" placeholder="Avatar">
-    </div>
-    <!-- <span *ngIf="formUser.controls['user'].errors?.['required'] &&
-                  formUser.controls['user'].touched" class="text-danger">Veuillez entrer un prenom
-    </span> -->
-    <!-- <div class="mb-3">
-        <select name="state" id="state" formControlName="state">
-            <option [value]="selected">{{selected}}</option>
-            <option *ngFor="let status of allStatus" [value]="status">{{status}}</option>
-        </select>
-    </div> -->
-    <button (click)="getAllUsers()" type="button" class="btn btn-primary">visualiser la liste des utilisateurs </button>
-    <button [disabled]="!formUser.valid" type="button" class="btn btn-primary">Envoyer</button>
-    <!-- <button [disabled]="!formUser.valid" (click)="updateUser()" type="button" class="btn btn-primary">Envoyer</button> -->
+<form (submit)="createUser(newUserName.value); newUserName.value = ''">
+    <input type="text" #newUserName required />
+    <button type="submit">Create</button>
 </form>
