--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -3,41 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Collapse</title>
   </head>
   <body>
-    <div>
-      <h2>Channels</h2>
-      <ul>
-        <li *ngFor="let channel of listChannels">
-          <a routerLink="messages" class="nav-link" style="padding-bottom: 0">
-            {{ channel.channelName }}
-          </a>
-          <form>
-            <input #newNameInput type="text" />
-            <button (click)="updateChannel(channel.id, newNameInput.value)">
-              Update
-            </button>
-          </form>
-          <!--<button (click)="updateChannel(channel.id, 'New Name')">
-          
-            Update
-          </button>
-        -->
-          <button (click)="deleteChannel(channel.id)">Delete</button>
-        </li>
-      </ul>
+    <div class="div-1">
+      <div>
+        <h2>Canal</h2>
+        <ul>
+          <li *ngFor="let channel of listChannels">
+            <a routerLink="messages" class="nav-link" style="padding-bottom: 0">
+              {{ channel.channelName }}
+            </a>
+            <div *ngIf="channel.channelName !== 'Général'">
+              <!-- Bouton pour mettre à jour le canal et basculer l'état de showInput -->
+              <button (click)="toggleInput(channel.id.toString())">
+                {{ showInput[channel.id] ? "Cancel" : "Update / Delete" }}
+              </button>
+              <div *ngIf="showInput[channel.id]">
+                <!-- L'input pour le nouveau nom du canal -->
+                <input class="nameInput" #newNameInput type="text" />
+                <!-- Bouton de soumission pour mettre à jour le canal -->
+                <button (click)="updateChannel(channel.id, newNameInput.value)">
+                  Save
+                </button>
+                <!-- Bouton de suppression pour supprimer le canal -->
+                <button (click)="deleteChannel(channel.id)">Delete</button>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
       <form
+        class="formSubmit"
         (submit)="
           createChannel(newChannelName.value); newChannelName.value = ''
         "
       >
         <input type="text" #newChannelName required />
-        <button type="submit">Create</button>
+        <button class="submitButton" type="submit">Create</button>
       </form>
     </div>
   </body>
 </html>
+<!--<button (click)="updateChannel(channel.id, 'New Name')">
+          
+            Update
+          </button>
+        -->
 <!--
 
    showInputUpdate
@@ -65,7 +76,7 @@
 </div>
 
 
-<!--      
+    
 <div class="div">
   <div class="div-2">
     <div class="div-3">#</div>
