--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -13,7 +13,11 @@
             <a routerLink="messages" class="nav-link" style="padding-bottom: 0">
               {{ channel.channelName }}
             </a>
-            <div *ngIf="channel.channelName !== 'Général'">
+            <div
+              *ngIf="
+                channel.channelName !== 'Général' && channel.channelName !== ''
+              "
+            >
               <!-- Bouton pour mettre à jour le canal et basculer l'état de showInput -->
               <button (click)="toggleInput(channel.id.toString())">
                 {{ showInput[channel.id] ? "Cancel" : "Update / Delete" }}
@@ -32,58 +36,25 @@
           </li>
         </ul>
       </div>
-      <form
-        class="formSubmit"
-        (submit)="
-          createChannel(newChannelName.value); newChannelName.value = ''
-        "
-      >
-        <input type="text" #newChannelName required />
-        <button class="submitButton" type="submit">Create</button>
-      </form>
+      <div class="canalDiv">
+        <div *ngIf="showForm">
+          <form
+            (submit)="
+              createChannel(newChannelName.value); newChannelName.value = ''
+            "
+          >
+            <input type="text" #newChannelName required />
+            <button class="submitButton" type="submit">Create</button>
+          </form>
+        </div>
+        <button
+          class="showFormButton"
+          (click)="showForm = true"
+          *ngIf="!showForm"
+        >
+          Créer un canal
+        </button>
+      </div>
     </div>
   </body>
 </html>
-<!--<button (click)="updateChannel(channel.id, 'New Name')">
-          
-            Update
-          </button>
-        -->
-<!--
-
-   showInputUpdate
-              *ngIf="channel.channelName === 'Géneral'"
-<div>
-  <h2>Channels</h2>
-  <ul>
-    <li *ngFor="let channel of listChannels">
-      <form>
-        <span>{{ channel.channelName }}</span>
-        <input #newNameInput type="text" />
-        <button (click)="updateChannel(channel.id, newNameInput.value)">
-          Update
-        </button>
-      </form>
-      <button (click)="deleteChannel(channel.id)">Delete</button>
-    </li>
-  </ul>
-  <form
-    (submit)="createChannel(newChannelName.value); newChannelName.value = ''"
-  >
-    <input type="text" #newChannelName />
-    <button type="submit">Create</button>
-  </form>
-</div>
-
-
-    
-<div class="div">
-  <div class="div-2">
-    <div class="div-3">#</div>
-    <p class="general">Général</p>
-  </div>
-  <div class="div-5">
-    <div class="div-6"><div class="div-7">1</div></div>
-  </div>
-</div>
--->
