--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -5,7 +5,7 @@
 
   <div class="name-message">
     <div class="name-hour">
-      <p class="text-name">{{ message.user.userName }}</p>
+      <p class="text-name">{{ message.user }}</p>
       <p class="note">{{ message.hour }}</p>
     </div>
     <p class="text-message">{{ message.content }}</p>
