update message component

--- a/src/front_angular/src/app/app.component.html
+++ b/src/front_angular/src/app/app.component.html
@@ -1,18 +1,2 @@
-<div id="app-container" class="position-relative">
-  <app-header></app-header>
-  <app-list-messages> </app-list-messages>
-
-  <div class="d-flex flex-grow-1 position-relative">
-    <div id="page-content-wrapper" class="bg-light" style="flex-grow: 1">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-  <div class="position-relative" style="position: relative">
-    <footer class="bg-dark d-flex align-items-center" style="height: 100px">
-      <p class="text-center text-light flex-grow-1 m-0">
-        &copy; 2023 CRM PRO. Tous droits réservés.
-      </p>
-    </footer>
-  </div>
-</div>
+<app-layout-chat></app-layout-chat>
 
