ajouts messages en fonction des channels

--- a/src/front_angular/src/app/core/chat/chat.component.html
+++ b/src/front_angular/src/app/core/chat/chat.component.html
@@ -1,1 +1,8 @@
+<div class="back">
 <p>chat works!</p>
+<app-channel></app-channel>
+<hr>
+<app-list-messages></app-list-messages>
+<hr>
+<app-form-message></app-form-message>
+</div>
