--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -1,6 +1,6 @@
 <h1>Liste des messages tests</h1>
 
-<div *ngFor="let message of messagesList" class="message-component">
+<div *ngFor="let message of messagesChannel" class="message-component">
   <img loading="lazy" srcset="../../../../assets/photo.jpg" class="img" />
 
   <div class="name-message">
