--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -1,56 +1,53 @@
-<h1>Liste des messages tests</h1>
+<div *ngFor="let message of messagesList; let i = index" class="message-component">
+  <div class="message-input">
+    <div class="message">
+      <img loading="lazy" srcset="../../../../assets/photo.jpg" class="img" />
 
-<div *ngFor="let message of messagesChannel" class="message-component">
-  <img loading="lazy" srcset="../../../../assets/photo.jpg" class="img" />
+      <div class="name-message">
+        <div class="name-hour">
+          <p class="text-name">{{ message.user?.userName }}</p>
+          <p class="note">{{ message.hour }}</p>
+        </div>
+        <p class="text-message">{{ message.content }}</p>
+      </div>
 
-  <div class="name-message">
-    <div class="name-hour">
-      <p class="text-name">{{ message.user }}</p>
-      <p class="note">{{ message.hour }}</p>
+
+      <svg
+        (click)="openButtons(i)"
+        class="setting"
+        width="22"
+        height="22"
+        viewBox="0 0 22 22"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <circle cx="11" cy="11" r="10.5" stroke="white" />
+        <circle cx="11.5" cy="6.5" r="1.5" fill="white" />
+        <circle cx="11.5" cy="11.5" r="1.5" fill="white" />
+        <circle cx="11.5" cy="16.5" r="1.5" fill="white" />
+      </svg>
+
+      <div [ngClass]="{'btns-open': buttonsOpen[i], 'btns-hidden': !buttonsOpen[i]}">
+        <div class="btn-config">
+          <button (click)="update(message.id)" class="btn update-btn">
+            Modifier le message
+          </button>
+          <button (click)="delete(message.id)" class="btn delete-btn">
+            Supprimer le message
+          </button>
+        </div>
+      </div>
     </div>
-    <p class="text-message">{{ message.content }}</p>
+
+    <form *ngIf="idMessage === message.id" [formGroup]="formMessage" class="form-message">
+      <input
+        formControlName="content"
+        type="text"
+        name="content"
+        id="content"
+        placeholder="Envoyer un message"
+      />
+      <button (click)="save()" class="div-3">Envoyer</button>
+    </form>
   </div>
-
-  <svg
-    (click)="openButtons()"
-    class="setting"
-    width="22"
-    height="22"
-    viewBox="0 0 22 22"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <circle cx="11" cy="11" r="10.5" stroke="white" />
-    <circle cx="11.5" cy="6.5" r="1.5" fill="white" />
-    <circle cx="11.5" cy="11.5" r="1.5" fill="white" />
-    <circle cx="11.5" cy="16.5" r="1.5" fill="white" />
-  </svg>
-
-  <div [ngClass]="[buttonsOpen]">
-    <div class="btn-config">
-      <button routerLink="/edit/{{ message.id }}" class="btn update-btn">
-        Modifier le message
-      </button>
-      <button (click)="delete(message.id)" class="btn delete-btn">
-        Supprimer le message
-      </button>
-    </div>
-  </div>
-
-  <form *ngIf="formMessage" [formGroup]="formMessage" class="div-2">
-    <input
-      formControlName="content"
-      type="text"
-      name="content"
-      id="content"
-      placeholder="Envoyer un message"
-    />
-    <button (click)="save()" class="div-3">Envoyer</button>
-  </form>
 </div>
-
-<!--
-  uppercase
-  date:'mm:ss'
-| message.hourdatePipe.transform(date:'mm:ss')
--->
