--- a/src/front_angular/src/app/core/chat/layout-chat/layout-chat.component.html
+++ b/src/front_angular/src/app/core/chat/layout-chat/layout-chat.component.html
@@ -1,6 +1,5 @@
-<p>Mise en page section discussion</p>
-<section>
-  <app-header></app-header>
+<div class="container">
+    <app-header></app-header>
   <app-list-messages></app-list-messages>
   <app-form-message></app-form-message>
-</section>
+</div>
