--- a/src/front_angular/src/app/app.component.html
+++ b/src/front_angular/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-channel></app-channel>
-<app-user></app-user>
-<app-layout-chat></app-layout-chat>
+<main class="row gx-10">
+    <section class="container col-4">
+        <app-layout-sidebar></app-layout-sidebar>
+    </section>
+    <section class="container col-8">
+        <app-layout-chat></app-layout-chat>
+    </section>
+</main>
+
+
