--- a/src/front_angular/src/app/core/chat/form-message/form-message.component.css
+++ b/src/front_angular/src/app/core/chat/form-message/form-message.component.css
@@ -9,33 +9,17 @@
         color: var(--Primary-color-blanc, #fff);
         padding: 15px;
       }
-      @media (max-width: 991px) {
-        .div {
-          flex-wrap: wrap;
-        }
-      }
-      .div-2 {
-        text-overflow: ellipsis;
-        font-family: Inter, sans-serif;
-        font-weight: 400;
-        flex-grow: 1;
-      }
-      @media (max-width: 991px) {
-        .div-2 {
-          max-width: 100%;
-        }
-      }
-      .div-3 {
-        font-family: Inter, sans-serif;
-        justify-content: center;
-        border-radius: var(--Border-radius-8, 8px);
-        background-color: rgba(18, 140, 91, 0.6);
-        font-weight: 500;
-        white-space: nowrap;
-        padding: 10px 16px;
-      }
-      @media (max-width: 991px) {
-        .div-3 {
-          white-space: initial;
-        }
-      }
+
+.form-message {
+  display: flex;
+  background: #302E33;
+  padding: 15px;
+  border-radius: var(--border-radius-bloc);
+  border: 1px solid #ffffff20;
+}
+
+textarea {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid transparent;
+}
