--- a/src/front_angular/src/app/core/chat/form-message/form-message.component.html
+++ b/src/front_angular/src/app/core/chat/form-message/form-message.component.html
@@ -1,13 +1,4 @@
-<div class="div">
-      <form [formGroup]="formMessage" class="div-2">
-      <input formControlName="content" type="text" name="content" id="content" placeholder="Envoyer un message">
-      <!-- <input hidden="true"  formControlName="channel" type="text" name="channel" id="channel" > -->
-
-      <button (click)="save()" class="div-3">Envoyer</button>
-      </form>
-      
-    </div>
-
-<hr>
-
- 
+<form [formGroup]="formMessage" class="form-message">
+  <textarea formControlName="content" type="text" name="content" id="content" placeholder="Envoyer un message dans..."></textarea>
+  <button (click)="save()" class="btn-valid">Envoyer</button>
+</form>
