--- a/src/front_angular/src/app/core/chat/header/header.component.html
+++ b/src/front_angular/src/app/core/chat/header/header.component.html
@@ -34,7 +34,8 @@
   <div class="chat-profil"></div>
 </header>
 
-<!-- UPDATE -->
+
+<!-- UPDATE 
 <div [ngClass]="[modalUpdateOpen]" class="modal-channel">
   <h1>Renommer ce canal</h1>
 
@@ -64,9 +65,9 @@
       </button>
     </div>
   
-</div>
+</div>-->
 
-<!-- DELETE-->
+<!-- DELETE
 <div [ngClass]="[modalDeleteOpen]" class="modal-channel">
   <h1>Souhaitez vous définitivement supprimer ce canal ?</h1>
   <p>Attention... vos données seront entièrement supprimées 😰</p>
@@ -78,37 +79,4 @@
       </button>
     </div>
   
-</div>
-
-<!--
-  <div [ngClass]="[modalOpen]">
-  <h1>Renommer ce canal</h1>
-
-  <form *ngIf="idChannel === channel.id" [formGroup]="formChannel">
-    <div>
-      <label for="channelName" class="form-label">Nom actuel</label>
-      <input
-        type="text"
-        name="channelName"
-        id="channelName"
-        class="form-control"
-        placeholder="channelName"
-      />
-
-      <span
-        *ngIf="formChannel.controls['name'].errors?.['required'] &&
-      formChannel.controls['name'].touched"
-        class="text-danger"
-        >Votre nom n'est pas valide (minimum 20 lettres)
-      </span>
-    </div>
-
-    <div class="btn-config">
-      <button (click)="cancel()" class="btn cancel-btn">Annuler</button>
-      <button (click)="update(idChannel)" class="btn update-btn">
-        Renommer
-      </button>
-    </div>
-  </form>
-</div>
--->
+</div>-->
