--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.css
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.css
@@ -42,3 +42,54 @@ ul {
   color: var(--primary-color-blanc);
   background-color: var(--hover-color);
 }
+
+/* Gestion des deux boutons */
+.btn-config {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--statut-color-unselected);
+  border-radius: var(--border-radius-bloc);
+}
+
+
+.btn:hover {
+  color: var(--primary-color-blanc);
+  background-color: var(--hover-color);
+}
+
+/*Gestion modale et elements */
+.modal-channel {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: var(--primary-color-modal_background);
+  border-radius: var(--border-radius-bloc);
+
+}
+
+h1, p{
+  text-align: center;
+}
+
+.btn-cancel {
+  border: 1px solid var(--statut-color-unselected);
+}
+
+.btn-config-modal {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.modal-hidden {
+  display:none;
+}
+
+.modal-open {
+  display:block;
+}
