--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -76,7 +76,7 @@
   </button>
 </div>
 
-<!-- UPDATE 
+
 <div [ngClass]="[modalUpdateOpen]" class="modal-channel">
   <h1>Renommer ce canal</h1>
 
@@ -101,12 +101,12 @@
 
     <div class="btn-config-modal">
       <button (click)="cancel()" class="btn btn-cancel">Annuler</button>
-      <button (click)="update(idChannel)" class="btn btn-valid">
+      <button (click)="updateChannel(idChannel)" class="btn btn-valid">
         Renommer
       </button>
     </div>
   
-</div>-->
+</div>
 
 <!-- DELETE
 <div [ngClass]="[modalDeleteOpen]" class="modal-channel">
