ajout message en fonction du channel et du user

--- a/src/front_angular/src/app/core/chat/header/header.component.css
+++ b/src/front_angular/src/app/core/chat/header/header.component.css
@@ -31,7 +31,7 @@
   background-color: var(--hover-color);
 }
 
-// Gestion des modales
+/* Gestion des modales */
 .modal {
     background-color: var(--primary-color-modal_background);
     border-radius: var(--border-radius-bloc);
