--- a/src/front_angular/src/app/core/chat/layout-chat/layout-chat.component.html
+++ b/src/front_angular/src/app/core/chat/layout-chat/layout-chat.component.html
@@ -3,4 +3,5 @@
   <app-header></app-header>
   <app-list-messages></app-list-messages>
   <app-form-message></app-form-message>
+  <app-user></app-user>
 </section>
