--- a/src/front_angular/src/app/core/sidebar/user/user.component.html
+++ b/src/front_angular/src/app/core/sidebar/user/user.component.html
@@ -46,12 +46,12 @@
                     </button>
                 </form>
             </td>
-            <!-- <td><button (click)="deleteUser(user.id)">Delete</button></td> -->
+            <td><button (click)="deleteUser(user.id)">Delete</button></td>
 
     </tbody>
 </table>
 
-<!-- <form (submit)="createUser(newUserName.value); newUserName.value = ''">
+<form (submit)="createUser(newUserName.value); newUserName.value = ''">
     <input type="text" #newUserName required />
     <button type="submit">Create</button>
-</form> -->
+</form>
