ajout des fichiers de la bdd

--- a/src/front_angular/src/app/core/sidebar/user/user.component.html
+++ b/src/front_angular/src/app/core/sidebar/user/user.component.html
@@ -36,6 +36,7 @@
 <h2>Users</h2>
 <ul class="usersTable" *ngFor="let user of listUsers">
     <li>
+        getAllUsers
         {{user.userName}}
     </li>
 </ul>
