ajout nom du channel

--- a/src/front_angular/src/app/core/chat/header/header.component.html
+++ b/src/front_angular/src/app/core/chat/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="chat-header">
   <div class="chat-info">
     <div class="name-setting">
-      <h2>Nom du canal actuel</h2>
+      <h2>{{channel.channelName}}</h2>
       <p>4 membres</p>
     </div>
     <div class="members-profil">
