--- a/src/front_angular/src/app/core/sidebar/channel/channel.component.html
+++ b/src/front_angular/src/app/core/sidebar/channel/channel.component.html
@@ -3,14 +3,10 @@
     <h2>Tous vos canaux</h2>
     <ul>
       <li *ngFor="let channel of listChannels; let i = index">
-        <div class="channel-item">
-          <a
-            routerLink="/chat/{{ channel.id }}"
-            class="nav-link"
-            style="padding-bottom: 0"
-          >
+        <div (click)="changeIdChannel(channel.id)" class="channel-item">
+          
             {{ channel.channelName }}
-          </a>
+          
           <div
             *ngIf="
               channel.channelName !== 'Général' && channel.channelName !== ''
