--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -48,7 +48,7 @@
     </div>
 
     <form
-      *ngIf="idMessage === message.id"
+      *ngIf="idMessage === message.id && formMessage"
       [formGroup]="formMessage"
       class="form-message"
     >
