opération avant pull

--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -1,5 +1,5 @@
 <div
-  *ngFor="let message of messagesChannel; let i = index"
+  *ngFor="let message of channel.messages; let i = index"
   class="message-component"
 >
   <div class="message-input">
