--- a/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
+++ b/src/front_angular/src/app/core/chat/list-messages/list-messages.component.html
@@ -10,6 +10,7 @@
         <div class="name-hour">
           <p class="text-name">{{ message?.user?.userName }}</p>
           <p class="note">{{ message.hour }}</p>
+          <p class="note">envoyé le {{ message.date }}</p>
         </div>
         <p class="text-message">{{ message.content }}</p>
       </div>
